# JDR_inno

./: .gitignore  .replit  Code arduino jdr.txt  Frontend.html  README.md  add_test_data.py  admin-interface.py  main.py  pyproject.toml  replit.md  server.py
app/: __init__.py  admin_window.py  database.py  user_window.py
