[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "customtkinter>=5.2.2",
    "flask>=3.1.2",
    "flask-cors>=6.0.2",
    "numpy>=2.4.2",
    "pillow>=12.1.0",
    "pyqt5>=5.15.11",
    "pywebview>=6.1",
    "serial>=0.0.97",
    "stl>=0.0.3",
    "vtk>=9.5.2",
]
